# Graphics-Rendering-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  comprehensive.vcxproj  comprehensive.vcxproj.filters  imgui.ini
Headers/: Animation.h  DepthMap.h  DrawShape.h  Input.h  Mesh.h  Plane.h  PreCompile.h  Shader.h  Texture.h  Triangle.h  camera.h  model.h  pch.h  skybox.h
Headers/OpenGL/: Animation.h  Animator.h  BloomFBO.h  BloomRenderer.h  DepthCubeMap.h  DepthMap.h  FrameBuffer.h  Mesh.h  ParticleGeometry.h  Particles.h  Shader.h  Texture.h  camera.h  model.h  skybox.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Shaders/: areaLight.frag  areaLight.vert  cubemap.frag  cubemap.vert  default-2.frag  default-2.vert  default.frag  default.geom  default.vert  light.frag  light.vert  material.frag  material.vert  model.frag  model.vert  particle.vert  shadowMap.vert  skeletonModel.vert  skybox.vert
Shaders/Bloom/: bloom.frag  downSampler.frag
Shaders/SSR/: SSR.frag  SSR.vert  SSR_PBR.frag
Shaders/deferredIBL/: colorPass.frag  gPass.frag  gPass.vert  geometryShader.vert
Shaders/deferredShading/: deferredShading.frag  gBuffer.frag  gBuffer.vert  gBufferView.frag  gBufferView.vert
Shaders/postProcess/: renderQuad.frag
Shaders/skyAtmosphere/: atmosphere.frag  multipleScatteredLUT.frag  skyViewLUT.frag  transmittanceLUT.frag
Shaders/ssao/: blur.frag  ssao.frag  ssao_depth.frag
src/: DrawShape.cpp  Main.cpp  Mesh.cpp  Model.cpp  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Texture.cpp  Triangle.cpp  camera.cpp  main_test.cpp  skybox.cpp
src/apps/SSAO-demo/: SSAO_demo.cpp  SSAO_demo.h
src/apps/SSR-demo/: SSR_demo.cpp  SSR_demo.h
src/apps/SSR-view-demo/: SSR_view_demo.cpp  SSR_view_demo.h
src/apps/animation/: animationApp.cpp
src/apps/area-light/: area_light_demo.cpp  area_light_demo.h
src/apps/comprehensive/: main.cpp
src/apps/deferred-IBL-demo/: deferredIBL_demo.cpp  deferredIBL_demo.h
src/apps/deferred-rendering/: deferred_render_demo.cpp  deferred_render_demo.h
src/apps/frame-buffer/: post-processing.cpp
src/apps/image-based-rendering/: pbr_demo.cpp  pbr_demo.h
src/apps/lighting/: lightingApp.cpp
src/apps/particle-demo/: ParticleDemo.cpp  ParticleDemo.h
src/apps/pbr/: pbr_demo.cpp
src/apps/ray-tracing/: BasicRayTracing.cpp  BasicRayTracing.h  accumulateScene.frag  rayTracer.frag
src/apps/sanbox/: main.cpp
src/apps/sandbox/: main.cpp
src/apps/shadow-map/: shadowMapApp.cpp
src/apps/skybox/: skyboxApp.cpp
src/apps/test_imgui/: main_test.cpp
src/apps/volumetric-light/: VolumetricLightDemo.cpp  VolumetricLightDemo.h
src/apps/volumetric-light/shaders/: pbr.frag  pbr.vert
src/core/: Application.cpp  Application.h
src/core/components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  CubeMapComponent.cpp  CubeMapComponent.h  LightComponent.h  MComponent.cpp  MComponent.h  SkyboxComponent.cpp  SkyboxComponent.h
src/core/components/legacy/: Component.cpp  Component.h  LightComponent.cpp  SkyboxComponent.cpp  SkyboxComponent.h
src/core/entities/: Entity.cpp  Entity.h
src/core/features/: AppWindow.cpp  AppWindow.h  ApplicationWindow.cpp  ApplicationWindow.h  Profiler.cpp  Profiler.h  Timer.cpp  Timer.h
src/core/layers/: AppLayer.cpp  AppLayer.h  BloomLayer.cpp  BloomLayer.h  EditorLayer.cpp  EditorLayer.h  Layer.h  LayerManager.cpp  LayerManager.h  RenderLayer.cpp  RenderLayer.h  SSAOLayer.h
src/core/layers/OpenGL/: AppLayer.cpp  BloomLayer.cpp  EditorLayer.cpp  LayerManager.cpp  SSAOLayer.cpp  SSRLayer.cpp  ShadowLayer.cpp
src/core/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/events/: Event.h  EventListener.h  EventManager.cpp  EventManager.h  WindowEvent.cpp  WindowEvent.h
src/graphics/: GraphicsController.cpp  GraphicsController.h  RenderController.h
src/graphics/components/: Component.cpp  Component.h  LightComponent.cpp  ModelComponent.cpp  PlaneComponent.cpp  PlaneComponent.h  SkyboxComponent.cpp  SkyboxComponent.h  Triangle.cpp
src/graphics/components/headers/: Component.h  GridComponent.h  ModelComponent.h  PlaneComponent.h  SkyboxComponent.h
src/graphics/core/: Animation.cpp  Animator.cpp  Bone.cpp  DepthMap.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  camera.cpp
src/graphics/core/OpenGL/: Animation.cpp  Animator.cpp  BloomFBO.cpp  BloomRenderer.cpp  DeferredRenderer.cpp  DeferredRenderer.h  DepthCubeMap.cpp  DepthMap.cpp  FrameBuffer.cpp  ImageBasedRenderer.cpp  Mesh.cpp  Model.cpp  ParticleGeometry.cpp  Particles.cpp  Renderer.cpp  Shader.cpp  ShadowMapRenderer.cpp  ShadowMapRenderer.h  SkyboxRenderer.cpp  Texture.cpp  camera.cpp  skybox.cpp
src/graphics/renderer/: AtmosphereRenderer.cpp  DeferredRenderer.h  ImageBasedRenderer.cpp  ImageBasedRenderer.h  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ShadowMapRenderer.h  SkyboxRenderer.h
src/graphics/utils/: Math.cpp  Utils.cpp  Utils.h  movement.cpp
src/graphics/utils/headers/: Math.h  Utils.h  movement.h
src/gui/: GuiController.cpp  GuiController.h  ImGuiController.cpp  ImGuiController.h
src/gui/headers/: ConsoleLogWidget.h  EntityControlWidget.h  LeftSidebarWidget.h  MenuWidget.h  RightSidebarWidget.h  SidebarLeftWidget.h  SidebarRightWidget.h  Themes.h  Widget.h
src/gui/widgets/: ConsoleLogWidget.cpp  EntityControlWidget.cpp  LeftSidebarWidget.cpp  MainViewWidget.cpp  MenuWidget.cpp  RightSidebarWidget.cpp  SidebarLeftWidget.cpp  SidebarRightWidget.cpp  SubViewWidget.cpp  Widget.cpp
